--- a/src/views/components/invite-list/_invite-list.scss
+++ b/src/views/components/invite-list/_invite-list.scss
@@ -1,21 +1,28 @@
 .invite-list {
-	.invite-item {
-		display: flex;
-		.item-title {
-			flex-grow: 1;
-		}
-		.delete {
-			font-weight: 800;
-			margin-left: 1em;
-			font-size: 2em;
-			transition: $iq-transition;
-			opacity: 0.7;
-			&:hover {
-				opacity: 1;
-			}
-			&:active {
-				color: black;
-			}
-		}
-	}
+    .invite-item {
+        display: flex;
+        .item-title {
+            flex-grow: 1;
+            color: white;
+            &:hover,
+            &:active,
+            &:focus {
+                color: white;
+                opacity: 1;
+            }
+        }
+        .delete {
+            font-weight: 800;
+            margin-left: 1em;
+            font-size: 2em;
+            transition: $iq-transition;
+            opacity: 0.7;
+            &:hover {
+                opacity: 1;
+            }
+            &:active {
+                color: black;
+            }
+        }
+    }
 }
