--- a/src/views/components/user-list/_user-list.scss
+++ b/src/views/components/user-list/_user-list.scss
@@ -1,6 +1,5 @@
 .user-list {
     .user-item {
-        padding: 0.5em 0;
         transition: $iq-transition;
         color: rgba(255, 255, 255, 0.8);
         &:hover {
