--- a/src/views/styles/styles.scss
+++ b/src/views/styles/styles.scss
@@ -80,6 +80,19 @@ input[type="submit"] {
             background: rgba(0, 0, 0, 0.6);
         }
     }
+    &.inverse {
+        color: black;
+        background: rgba(255, 255, 255, 0.2);
+        &:not([disabled]) {
+            &:hover {
+                background: rgba(255, 255, 255, 0.4);
+            }
+            &:active,
+            &:focus {
+                background: rgba(255, 255, 255, 0.6);
+            }
+        }
+    }
 }
 
 input {
@@ -103,17 +116,20 @@ input {
         align-content: space-between;
         align-items: center;
         transition: $iq-transition;
-        .item-title {
-            flex-grow: 1;
-            color: rgba(255, 255, 255, 0.8);
-            &:hover {
-                color: rgba(255, 255, 255, 1);
-            }
-            &:active {
-                color: black;
-            }
-        }
         .item-buttons {
+        }
+        .right-content {
+            line-height: 1em;
+        }
+    }
+    .item-title {
+        flex-grow: 1;
+        color: rgba(255, 255, 255, 0.8);
+        &:hover {
+            color: rgba(255, 255, 255, 1);
+        }
+        &:active {
+            color: black;
         }
     }
 }
